src/less/glide.less
@import "_mixin.less";

/*====================
  Glide structure
 ====================*/

html {
  -webkit-text-size-adjust: none;
}

a, button {
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  -webkit-touch-callout: none;
  cursor: pointer;
}

html, body, ul, li {
  margin:0;
  padding:0;
  border:0;
}

ul {
  list-style: none;
}

body {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size:16px;
    -webkit-touch-callout:none;
    -webkit-user-select:none;
    -webkit-tap-highlight-color: transparent;
}

html, body {
    height:100%;
    overflow:hidden; /* prevents rubber-banding on desktop Safari */
}

body, .page {
    display: -webkit-box;
    display: -moz-box;
    display: box;

    -webkit-box-orient: vertical;
    -moz-box-orient: vertical;
    box-orient: vertical;
    height:100%;
    width: 100%;

    -webkit-box-align: stretch;
    -webkit-box-flex: 1;
}

.page {
    -webkit-box-flex: 1;
    -moz-box-flex: 1;
    box-flex: 1;

    display: -webkit-box;
    display: -moz-box;
    display: box;

    -webkit-box-orient: vertical;
    -moz-box-orient: vertical;
    box-orient: vertical;

    height:100%;

    position: absolute;
}

.scrollview {
    -webkit-box-flex: 1;
    -moz-box-flex: 1;
    box-flex: 1;

    display: -webkit-box;
    display: -moz-box;
    display: box;

    -webkit-box-orient: vertical;
    -moz-box-orient: vertical;
    box-orient: vertical;

    overflow: auto;
    -webkit-overflow-scrolling: touch;
}

.scrollview-inner {
    -webkit-box-flex: 1;
    -moz-box-flex: 1;
    box-flex: 1;
    display:block;
    overflow: auto;
    -webkit-overflow-scrolling: touch;
}

.scrollview-content {
    display:block;
    -webkit-box-flex:1;
}

header, footer {
  height: 45px;
  line-height: 45px;
  padding: 0 10px;
  display: block;
  width: 100%;
  text-align: center;
  .box-sizing;
}

.hidden {
  display: none;
}

